finish mobile view

--- a/index.html
+++ b/index.html
@@ -244,21 +244,25 @@
         </section>
 
         <section class="footer__box social">
-            <figure class="social__figure">
-                <i class="social__icon icon-facebook"></i>
-            </figure>
+            <a class="social__figure" href="#">
+                <i class="social__icon icon-facebook">
+                </i>
+            </a>
 
-            <figure class="social__figure">
-                <i class="social__icon icon-twitter"></i>
-            </figure>
+            <a class="social__figure" href="#">
+                <i class="social__icon icon-twitter">
+                </i>
+            </a>
 
-            <figure class="social__figure">
-                <i class="social__icon icon-instagram"></i>
-            </figure>
+            <a class="social__figure" href="#">
+                <i class="social__icon icon-instagram">
+                </i>
+            </a>
 
-            <figure class="social__figure">
-                <i class="social__icon icon-mail"></i>
-            </figure>
+            <a class="social__figure" href="#">
+                <i class="social__icon icon-mail">
+                </i>
+            </a>
         </section>
     </footer>
 
