debuging mobile view and make breakpoint

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Responsive Landing Page</title>
 
     <!-- CURRENT VERSION IS BETA! I am works!. -->
-
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.min.css">
     <link rel="stylesheet" href="css/fontello.css">
 </head>
@@ -17,28 +17,28 @@
         <h1 class="nav__logo">
             LOGO
         </h1>
-        <ul class="nav__list">
-            <li class="nav__item">
-                <a class="nav__link" href="#">Simple</a>
+        <ul class="nav__list resetlist">
+            <li class="nav__item resetlist">
+                <a class="nav__link link" href="#">Simple</a>
             </li>
-            <li class="nav__item">
-                <a class="nav__link" href="#">Code</a>
+            <li class="nav__item resetlist">
+                <a class="nav__link link" href="#">Code</a>
             </li>
-            <li class="nav__item">
-                <a class="nav__link" href="#">Pricing</a>
+            <li class="nav__item resetlist">
+                <a class="nav__link link" href="#">Pricing</a>
             </li>
-            <li class="nav__item">
-                <a class="nav__link" href="#">Footer</a>
+            <li class="nav__item resetlist">
+                <a class="nav__link link" href="#">Footer</a>
             </li>
         </ul>
     </nav>
 
     <section class="start">
         <header class="start__header">
-            <p class="start__subtitle">
+            <p class="start__subtitle subtitle">
                 Easy to use
             </p>
-            <h1 class="start__title">
+            <h1 class="start__title title">
                 Responsive Landing Page
             </h1>
             <p class="start__description">
@@ -54,10 +54,10 @@
             <i class="simple__phone icon-mobile"></i>
         </figure>
         <header class="simple__header">
-            <p class="simple__subtitle">
+            <p class="simple__subtitle subtitle">
                 Responsive web design
             </p>
-            <h1 class="simple__title">
+            <h1 class="simple__title title">
                 Website scaled to every device
             </h1>
             <p class="simple__description ">
@@ -93,10 +93,10 @@
             <i class="code__page icon-landingpage"></i>
         </figure>
         <header class="code__header">
-            <p class="code__subtitle">
+            <p class="code__subtitle subtitle">
                 Free for everyone
             </p>
-            <h1 class="code__title">
+            <h1 class="code__title title">
                 Only code
             </h1>
             <p class="code__description">
@@ -132,13 +132,13 @@
             <header class="box__header">
                 Regular plan
             </header>
-            <p class="box__subtitle">
+            <p class="box__subtitle subtitle">
                 6$
             </p>
             <article class="box__description">
                 Features:
                 <ul class="box__group">
-                    <li class="box__list">
+                    <li class="box__list resetlist">
                         <span class="box__list-mark">HTML5</span> semantic
                     </li>
                     <li class="box__list">
@@ -199,7 +199,7 @@
             <header class="box__header">
                 Junior Plan
             </header>
-            <p class="box__subtitle">
+            <p class="box__subtitle subtitle">
                 0$
             </p>
             <article class="box__description">
@@ -228,17 +228,17 @@
                 Navigation:
             </header>
             <ul class="navfooter__group">        
-                <li class="navfooter__item">
-                    <a class="navfooter__link" href="#">Simple</a>
+                <li class="navfooter__item resetlist">
+                    <a class="navfooter__link link" href="#">Simple</a>
                 </li>
-                <li class="navfooter__item">
-                    <a class="navfooter__link" href="#">Code</a>
+                <li class="navfooter__item resetlist">
+                    <a class="navfooter__link link" href="#">Code</a>
                 </li>
-                <li class="navfooter__item">
-                    <a class="navfooter__link" href="#">Pricing</a>
+                <li class="navfooter__item resetlist">
+                    <a class="navfooter__link link" href="#">Pricing</a>
                 </li>
-                <li class="navfooter__item">
-                    <a class="navfooter__link" href="#">Footer</a>
+                <li class="navfooter__item resetlist">
+                    <a class="navfooter__link link" href="#">Footer</a>
                 </li>
             </ul>
         </section>
