make animation for navbutton

--- a/index.html
+++ b/index.html
@@ -18,28 +18,12 @@
             LOGO
         </h1>
 
-        <button class="navigation__button nav">
-            <span class="nav__line">
-                <span class="nav__fill"></span>
+        <button class="navbutton">
+            <span class="navbutton__box">
+                <span class="navbutton__fill"></span>
             </span>
         </button>
         
-    <!--
-        <ul class="navigation__list resetlist">
-            <li class="navigation__item resetlist">
-                <a class="navigation__link link" href="#">Simple</a>
-            </li>
-            <li class="navigation__item resetlist">
-                <a class="navigation__link link" href="#">Code</a>
-            </li>
-            <li class="navigation__item resetlist">
-                <a class="navigation__link link" href="#">Pricing</a>
-            </li>
-            <li class="navigation__item resetlist">
-                <a class="navigation__link link" href="#">Footer</a>
-            </li>
-        </ul>
-    -->
     </nav>
 
     <section class="container__item start">
