--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
         </button>
         <ul class="navigation__list">
             <li class="navigation__item">
-                <a class="navigation__link" href="#">Simple</a>
+                <a class="navigation__link" href="#simple">Simple</a>
             </li>
             <li class="navigation__item">
-                <a class="navigation__link" href="#">Code</a>
+                <a class="navigation__link" href="#code">Code</a>
             </li>
             <li class="navigation__item">
-                <a class="navigation__link" href="#">Pricing</a>
+                <a class="navigation__link" href="#pricing">Pricing</a>
             </li>
             <li class="navigation__item">
-                <a class="navigation__link" href="#">Footer</a>
+                <a class="navigation__link" href="#footer">Footer</a>
             </li>
         </ul>
     </nav>
 
-    <section class="container__item start">
+    <section class="container__item start container__part">
         <header class="start__header">
             <p class="start__subtitle">
                 Easy to use
@@ -48,9 +48,11 @@
             <p class="start__description">
                 It is a simple responsive template. I created it using: SCCS, vanillaJS and fontello font. RWD: Grid & Flexbox.
             </p>
-            <button class="start__button" type="button">
-                Read more
-            </button>
+            <form>
+                <button class="start__button" type="submit" formaction="#simple">
+                    Read more
+                </button>
+            </form>
         </header>
         <div class="start__box box">
             <section class="box__item">
@@ -77,7 +79,7 @@
         </div>
     </section>
 
-    <article class="container__item simple">
+    <article class="container__item simple container__part" id="simple">
         <figure class="simple__figure">
             <i class="simple__phone icon-mobile"></i>
         </figure>
@@ -94,7 +96,7 @@
         </header>
     </article>
 
-    <aside class="container__item code">
+    <aside class="container__item code container__part" id="code">
         <figure class="code__figure">
             <i class="code__page icon-landingpage"></i>
         </figure>
@@ -139,7 +141,7 @@
         </div>
     </aside>
 
-    <main class="pricing">
+    <main class="pricing container__part" id="pricing">
         <header class="pricing__header">
             <p class="pricing__subtitle">
                 Available options
@@ -191,6 +193,7 @@
                 </section>
                 <ul class="offer__list">
                     <li class="offer__item">
+                        <i class="box__icon icon-ok"></i>
                         HTML5 semanitc
                     </li>
                     <li class="offer__item">
@@ -210,7 +213,7 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer container__part" id="footer">
         <section class="footer__box about">
             <header class="about__logo">
                 LOGO
